[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "apscheduler>=3.11.2",
    "python-telegram-bot>=22.7",
    "qrcode>=8.2",
    "requests>=2.33.1",
    "simplejson>=4.1.1",
]
